[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Menu.png" type="Texture" id=1]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Font3.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/AboutMenu.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Logo.png" type="Texture" id=5]
[ext_resource path="res://UnsadedCanvas.tres" type="Material" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="AboutMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -300.0
margin_right = 350.0
margin_bottom = 300.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -350.0
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 700, 700 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="TextureRect"]
position = Vector2( 250, 160 )
scale = Vector2( 1.8, 0.8 )
texture = ExtResource( 2 )
color = Color( 0.784314, 0.784314, 1, 1 )
energy = 3.0

[node name="Light2D2" type="Light2D" parent="TextureRect"]
position = Vector2( 545, 160 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 2 )
color = Color( 1, 0, 0, 1 )
energy = 5.0

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 500 )
rect_pivot_offset = Vector2( 300, 250 )
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
material = SubResource( 1 )
margin_right = 600.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 130 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Label" type="Label" parent="Menu"]
material = ExtResource( 6 )
margin_top = 130.0
margin_right = 600.0
margin_bottom = 420.0
rect_min_size = Vector2( 600, 290 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="Menu"]
margin_top = 420.0
margin_right = 600.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 80 )
flat = true

[node name="Label" type="Label" parent="Menu/Button"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_min_size = Vector2( 200, 20 )
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Button"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 2 )
energy = 0.0

[node name="ButtonA" type="AnimationPlayer" parent="Menu"]
anims/BackIn = SubResource( 3 )
anims/BackOut = SubResource( 4 )
[connection signal="mouse_entered" from="Menu/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Menu/Button" to="." method="_on_Button_pressed"]
